--- a/desafios/dsf011/style/style.css
+++ b/desafios/dsf011/style/style.css
@@ -14,10 +14,57 @@ header {
     background-color: black;
     color: white;
     text-align: center;
-    margin-top: 20px;
+    
 
 }
 
 header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
 
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a { 
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+    
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    line-height: 2em;
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgb(75, 75, 75);
+    color: white;
+
+}
+
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.397);
+    width: 400px;
+}
+
+footer > p {
+    color: white;
+    background-color: black;
+    text-align: center;
+    padding: 2px;
 }
