--- a/desafios/dsf011/style/style.css
+++ b/desafios/dsf011/style/style.css
@@ -1,24 +1,37 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {    
+    --font01: Verdana, Geneva, Tahoma, sans-serif;    
+    --font02: 'Passion One', cursive;--font03:'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    
 }
 
 html, body {
+    font-size: 1em;
+    font-family: var(--font01);
     min-height: 100vh;
     background-color: beige;
 }
 
 header {
-    background-color: black;
+    background-color: black;    
     color: white;
-    text-align: center;
-    
+    text-align: center;    
 
 }
 
 header > h1 {
+    font-family: var(--font02);
+    font-size: 8vw;
     padding-top: 50px;
     font-variant: small-caps;
 
@@ -40,10 +53,12 @@ a:hover {
 }
 
 section {
+    font-family: var(--font03);
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -54,12 +69,13 @@ section.normal {
 section.imagem {
     background-color: rgb(75, 75, 75);
     color: white;
-
+    
 }
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.397);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer > p {
